# ms-sandbox

./: .pre-commit-config.yaml  QUICKSTART.md  README.md  README_zh.md  REFACTOR_README.md  build_sandbox_image.sh  pyproject.toml  test.py
examples/: server_example.py  usage_examples.py
ms_sandbox/: run_server.py
ms_sandbox/sandbox/: __init__.py  config.py  sandbox_client.py  sandbox_server.py  server.py
ms_sandbox/sandbox/boxes/: __init__.py  base.py  docker_notebook.py  docker_sandbox.py
ms_sandbox/sandbox/client/: __init__.py  base.py  http_client.py
ms_sandbox/sandbox/docker/: docker_client.py  docker_server.py
ms_sandbox/sandbox/manager/: __init__.py  base.py  http_manager.py  local_manager.py  sandbox_manager.py
ms_sandbox/sandbox/model/: __init__.py  base.py  config.py  requests.py  responses.py
ms_sandbox/sandbox/server/: server.py
ms_sandbox/sandbox/tools/: __init__.py  base.py  file_operations.py  python_executor.py  sandbox_tool.py  shell_executor.py  tool_info.py
ms_sandbox/sandbox/tools/sandbox_tools/: file_operation.py  python_executor.py  shell_executor.py
ms_sandbox/sandbox/utils/: logger.py
tests/: test_manager.py  test_refactor.py  test_sandbox.py  test_tool.py
