[project]
name = "ms-sandbox"
dynamic = ["version"]
description = "Modularized and Stable Sandbox runtime environment."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "ModelScope team", email = "contact@modelscope.cn" },
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "openai",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "shortuuid>=1.0.13",
]

[tool.setuptools]
packages = ["ms_sandbox"]

[tool.setuptools.dynamic]
version = { attr = "ms_sandbox.__version__" }

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
docker = [
    "docker>=7.1.0",
]
